# tmux-zh

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  README.md  flake.nix  pyproject.toml
.github/workflows/: main.yml  version.yml
docs/: conf.py
po4a/: po4a.cfg.in
po4a/zh_CN/: tmux.1.po  tmux.1.roff
po4a/zh_TW/: .gitignore
scripts/: git-commit.sh  post-git-commit.sh
